syntax = "proto3";

package yandex.cloud.events.serverless.triggers;

import "google/protobuf/struct.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/serverless/triggers;triggers";
option java_package = "yandex.cloud.api.events.serverless.triggers";

message TimerMessage {
    EventMetadata event_metadata = 3 [(required) = true];
    EventDetails details = 7 [(required) = true];

    message EventDetails {
        string trigger_id = 1 [(required) = true];
    }
}

message ObjectStorageMessage {
    EventMetadata event_metadata = 3 [(required) = true];
    EventDetails details = 7 [(required) = true];

    message EventDetails {
        string bucket_id = 1 [(required) = true];
        string object_id = 2 [(required) = true];
    }
}

message ContainerRegistryImageMessage {
    EventMetadata event_metadata = 3 [(required) = true];
    EventDetails details = 7 [(required) = true];

    message EventDetails {
        string registry_id = 1 [(required) = true];
        string image_id = 2 [(required) = true];
        string repository_name = 4 [(required) = true];
        string image_digest = 5 [(required) = true];
        string tag = 6;
    }
}

message CloudLogsMessageBatch {
    EventMetadata event_metadata = 3 [(required) = true];
    EventDetails details = 7 [(required) = true];

    message EventDetails {
        repeated CloudLogsMessage messages = 1 [(required) = true];
    }
}

message CloudLogsMessage {
    string log_group_id = 1 [(required) = true];
    string log_stream_name = 2 [(required) = true];
    string message = 3 [(required) = true];
    string timestamp = 4 [(required) = true];
}

message LoggingMessageBatch {
    EventMetadata event_metadata = 3 [(required) = true];
    EventDetails details = 7 [(required) = true];

    message EventDetails {
        repeated LoggingMessage messages = 1 [(required) = true];
    }
}

message LoggingMessage {
    LogEntryResource resource = 1;
    string timestamp = 2 [(required) = true];
    string level = 3;
    string message = 4 [(required) = true];
    google.protobuf.Struct json_payload = 5 [(bytes) = "<=65536"];
}

message LogEntryResource {
  // Resource type, i.e., `serverless.function`
  string type = 1 [(pattern) = "|[a-zA-Z][-a-zA-Z0-9_.]{1,62}"];

  // Resource ID, i.e., ID of the function producing logs.
  string id = 2 [(pattern) = "|[a-zA-Z][-a-zA-Z0-9_.]{1,62}"];
}

message BillingBudgetMessage {
    string billing_account_id = 1 [(length) = "<=50"];
    string budget_id = 2 [(length) = "<=50"];
    string budget_display_name = 3;
    double amount = 4;
    string currency = 5;
    string period = 6;
    double budgeted_amount = 7;
    double threshold_amount = 8;
    string threshold_type = 9;
}

message MailMessage {
    string received_at = 1 [(required) = true];
    repeated Header headers = 2;
    string message = 3 [(required) = true];

    message Header {
        string name = 1 [(required) = true];
        repeated string values = 2;
    }
}
